# rustbatch

./: Cargo.toml  README.md
lib/procedures/: Cargo.toml
lib/procedures/src/: lib.rs
lib/tests/: Cargo.toml
lib/tests/src/: main.rs
src/: batch.rs  buffer.rs  lib.rs  main.rs  mat.rs  program.rs  texture.rs  triangle.frag  triangle.vert  vect.rs
src/debug/: mod.rs
src/entity/: component_map.rs  id_generator.rs  mod.rs  pathfinder.rs  scanner.rs  storage.rs
src/images/: mod.rs
src/math/: base.rs  curve.rs  mat.rs  mat3.rs  mod.rs  rect.rs  rgba.rs  vect.rs
src/render/: batch.rs  buffer.rs  canvas.rs  mod.rs  program.rs  shader.rs  sprite.rs  texture.rs  window.rs
src/render/particle/: mod.rs  shapes.rs  system.rs
src/render/preprocessing/: framebuffer.rs  mod.rs  render_buffer.rs
